force-app/main/default/objects/Interview_Prep_Session__c/Interview_Prep_Session__c.object-meta.xml
<CustomObject>
    <label>Interview Prep Session</label>
    <pluralLabel>Interview Prep Sessions</pluralLabel>
    <nameField>
        <displayFormat>PREP-{0000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>