force-app/main/default/objects/Interview_Prep_Session__c/fields/Areas_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Areas_for_Improvement__c</fullName>
    <label>Areas for Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>