force-app/main/default/objects/Interview_Prep_Session__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Interview Prep Sessions</relationshipLabel>
    <relationshipName>Interview_Prep_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>