force-app/main/default/objects/Interview_Prep_Session__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Interview Prep Sessions</relationshipLabel>
    <relationshipName>Interview_Prep_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>