force-app/main/default/objects/Interview_Prep_Session__c/fields/Questions_Answered__c.field-meta.xml
<CustomField>
    <fullName>Questions_Answered__c</fullName>
    <label>Questions Answered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>