force-app/main/default/objects/Interview_Prep_Session__c/fields/Questions_Asked__c.field-meta.xml
<CustomField>
    <fullName>Questions_Asked__c</fullName>
    <label>Questions Asked</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>