force-app/main/default/objects/Interview_Prep_Session__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <label>Session Date</label>
    <type>DateTime</type>
</CustomField>