force-app/main/default/objects/Interview_Prep_Session__c/fields/Session_Summary__c.field-meta.xml
<CustomField>
    <fullName>Session_Summary__c</fullName>
    <label>Session Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>